# idutils

./: .cvsignore  .gitignore  .prev-version  .x-sc_cast_of_argument_to_free  .x-sc_program_name  .x-sc_prohibit_always_true_header_tests  .x-sc_require_config_h  ABOUT-NLS  AUTHORS  BLURB  ChangeLog  ChangeLog-2007  GNUmakefile  INSTALL-cvs  Makefile.am  Makefile.cfg  Makefile.in  Makefile.maint  NEWS  NOTES  README  README-alpha  README-hacking  README-release  README.alpha-test  THANKS  TODO  acconfig.h  aclocal.m4  alloc.h  autogen.sh  bitops.c  bitops.h  bootstrap  bootstrap.conf  cfg.mk  config.h.in  configure  configure.ac  configure.in  (+42 more)
doc/: .cvsignore  Makefile.am  Makefile.in  id-utils.info  id-utils.texi  idutils.texi  stamp-vti  version.texi
intl/: .cvsignore  ChangeLog  Makefile.in  VERSION  dcgettext.c  explodename.c  finddomain.c  gettextP.h  l10nflist.c  libgettext.h  localealias.c  textdomain.c
lib/: Makefile.am  Makefile.in  alloc.h  basename.c  bitops.c  bitops.h  dirname.c  dynvec.c  dynvec.h  error.c  filenames.c  filenames.h  fnmatch.c  fnmatch_loop.c  hash.c  hash.h  idarg.h  idfile.c  idfile.h  idwalk.c  misc.c  misc.h  obstack.c  obstack.h  pathmax.h  regex_internal.h  scanners.c  scanners.h  strndup.c  strsep.c  strxtra.h  system.h  token.c  token.h  xmalloc.h
libidu/: Makefile.am  Makefile.in  dynvec.c  dynvec.h  fnprint.c  hash.c  hash.h  id-lang.map  idfile.c  idfile.h  idread.c  idu-hash.c  idu-hash.h  iduglobal.h  idwrite.c  scanners.c  scanners.h  tokflags.h  walker.c  xnls.h
lisp/: Makefile.am  Makefile.in  idutils.el
m4/: ChangeLog  Makefile.am  Makefile.in  extra_dist.sh  gettext.m4  gnulib-cache.m4  gnulib-comp.m4
man/: Makefile.am  aid.x  defid.x  eid.x  fid.x  fnid.x  gid.x  lid.x  mkid.x  xtokid.x
po/: .cvsignore  LINGUAS  Makefile.in.in  Makevars  Makevars.template  POTFILES.in  de.po  fr.po  nl.po  pl.po
src/: .cvsignore  Makefile.am  Makefile.in  ansi2knr.c  defid  fid.c  fnid.c  gid  idx.c  lid-aid.c  lid-eid.c  lid-gid.c  lid-lid.c  lid.c  lid.h  mkid.c  xtokid.c
testsuite/: Coreutils.pm  CuTmpdir.pm  Makefile.am  Makefile.in  check.mk  consistency  envvar-check  files0-from  help-version  infloop-kawa-el  init.sh  lid-radix  lid-range  mkid-langopt
