dnl Process this file with autoconf to produce a configure script.

dnl Note: the banner comments below are intentionally done in shell syntax.
dnl These help me identify sections of the configure script produced
dnl by autoconf.  Some comments might appear inane and obvious, but again
dnl they are there to delimit sections in the output configure script.

##############################################################################
################ Setup #######################################################
##############################################################################

AC_INIT(src/mkid.c)
AC_CONFIG_HEADER(config.h)
AC_PREREQ(2.10)
AC_ARG_PROGRAM

##############################################################################
################ Identify Package ############################################
##############################################################################

PACKAGE=id-utils
VERSION=3.0.9
PACKAGE_VERSION="$PACKAGE-$VERSION"
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(PACKAGE_VERSION, "$PACKAGE_VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE_VERSION)

##############################################################################
################ Maintainer Stuff ############################################
##############################################################################

jm_MAINTAINER_MODE

ALL_LINGUAS="de fr"

changequote(,)dnl
case $VERSION in
*.*.*) README_ALPHA=README-alpha;;
*) README_ALPHA=;;
esac
changequote([, ])dnl
AC_SUBST(README_ALPHA)

##############################################################################
################ Check for tools #############################################
##############################################################################

AC_PROG_CC
AC_PROG_LN_S
fp_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB
AC_AIX
AC_MINIX
AC_ISC_POSIX

##############################################################################
################ Check for libraries #########################################
##############################################################################

dnl no library checks

##############################################################################
################ Check for header files ######################################
##############################################################################

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_STAT
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(limits.h sys/types.h sys/param.h stdlib.h unistd.h string.h)
AC_CHECK_HEADERS(malloc.h sys/ioctl.h termios.h termio.h sgtty.h regex.h)

##############################################################################
################ Check for typedefs, structs, and compiler params ############
##############################################################################

AC_C_CONST
fp_C_PROTOTYPES
AC_TYPE_SIGNAL
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

##############################################################################
################ Set default compilation flags ###############################
##############################################################################

: ${CFLAGS=-g}
: ${LDFLAGS=-g}
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

##############################################################################
################ Check for library functions & system calls ##################
##############################################################################

AC_FUNC_ALLOCA
gm_DECL_SBRK
gm_DECL_SYS_ERRLIST
ud_WITH_REGEX
AC_CHECK_FUNCS(getwd getcwd link)
AC_REPLACE_FUNCS(strcasecmp strdup strndup strtok fnmatch)
AC_REPLACE_FUNCS(basename dirname error memcpy memset)
AC_REPLACE_GNU_GETOPT
AC_REPLACE_OBSTACK

##############################################################################
################ Internationalization ########################################
##############################################################################

ud_GNU_GETTEXT
AC_LINK_FILES($nls_cv_header_libgt, $nls_cv_header_intl)

##############################################################################
################ Generate the configure script ###############################
##############################################################################

AC_OUTPUT([Makefile doc/Makefile lib/Makefile src/Makefile intl/Makefile po/Makefile.in],
	[sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile; \
	 test -z "$CONFIG_HEADERS" || echo timestamp >stamp-h])

##############################################################################
################ Done ########################################################
##############################################################################
